# SunsetScope

./: .gitignore  README.md  pyproject.toml  requirements.txt  目前已有信息.md
app/: main.py
app/static/: app.js  style.css
app/templates/: index.html
atmosphere/: sunset.ipynb
data/app/: latest_update.json
data/collections/hainan/2026-04-28/: metadata.json
data/raw/forecast/: smoke_msl_proxy.grib2
data/raw/truth/: era5_sanya_20260401.grib
scripts/: README.md  __init__.py  build_training_table.py  check_data_access.py  convert_era5_grib_to_csv.py  download_era5_truth.py  download_open_meteo_china_forecast.py  download_open_meteo_historical_forecast.py  download_open_meteo_tile_forecast.py  download_recent_era5_truth.py  modeling_config.py  score_china_forecast.py  sunset_grid_score.py  sunset_rules.py  update_hainan_forecast.py
scripts/legacy/: __init__.py  download_open_forecast.py
